--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -6,3 +6,15 @@
   border-radius: 10vh;
   margin: 2.5vh;
 }
+
+.bot {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: 400px;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(255, 255, 255);
+}
