--- a/src/components/sideMenu/SideMenu.css
+++ b/src/components/sideMenu/SideMenu.css
@@ -34,11 +34,14 @@
 .box_user {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    padding-top: 1vw;
+    padding-bottom: 2vw;
     align-items: center;
     margin: 1vh;
     width: 8vw;
-    height: 43vh;
+    height: 40vh;
+    gap: 5vh;
     border-radius: 10vh;
     background-color: rgb(238, 238, 238);
 }
@@ -80,7 +83,7 @@
     background-color: rgb(238, 238, 238);
     rotate: 90deg;
     z-index: 2;
-    border-radius: 20px;
+    border-radius: 100px;
     -webkit-transition: all .35s;
     transition: all .35s;
 }
@@ -101,7 +104,7 @@
     width: 18px;
     left: 35%;
     -webkit-transform: translateX(0%) translateY(-100%) scale(0);
-    transform: translateX(0%) translateY(-30%) scale(0);
+    transform: translateX(0%) translateY(-50%) scale(0);
 }
 
 .input_wrapper .is_unchecked {
@@ -144,7 +147,18 @@
     align-items: center;
 }
 
+.menu_divider {
+    width: 5vw;
+    height: 0.3vh;
+    background-color: rgb(161, 161, 161);
+    border-radius: 50px;
+}
+
 .pc_number {
     font-size: 1.5vh;
     color: rgb(161, 161, 161);
+    background-color: var(--white);
+    padding: 2vh;
+    border-radius: 100%;
+    margin-top: 1rem;
 }
