--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -7,14 +7,13 @@
   margin: 2.5vh;
 }
 
-.bot {
+.image_detail {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 400px;
-  height: 400px;
+  width: 30vw;
+  height: 60vh;
   position: fixed;
-  right: 0;
-  bottom: 0;
-  background-color: rgb(255, 255, 255);
+  right: 2.5vh;
+  bottom: 1vw;
 }
