--- a/src/components/sideMenu/SideMenu.css
+++ b/src/components/sideMenu/SideMenu.css
@@ -26,9 +26,17 @@
     justify-content: center;
     align-items: center;
     height: 3.5vh;
-    width: 3.5vw;
-    border-radius: 10vh;
+    width: 9vw;
     color: rgb(161, 161, 161);
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.icon_menu.active {
+    color: var(--quaternary-color);
+    border-right: 2px solid var(--quaternary-color);
+    scale: 1.1;
+    transition: 0.2s;
 }
 
 .box_user {
@@ -161,4 +169,10 @@
     padding: 2vh;
     border-radius: 100%;
     margin-top: 1rem;
+}
+
+.logo_menu {
+    width: 2.5vw;
+    height: 2.5vw;
+    border-radius: 50%;
 }
