--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 95vh;
-  background-color: rgb(238, 238, 238);
+  background-color: var(--base-color1);
   border-radius: 10vh;
   margin: 2.5vh;
 }
