Mudanças de temas em SVG

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ body::-webkit-scrollbar-thumb {
   --senary-color: #E16237;
   --base-color1: #eeeeee;
   --base-color2: #ffffff;
+  --image-detail: '../../assets/img/Ativo 3.png';
 
   --white: #fff;
   --black: #000;
