--- a/src/components/sideMenu/SideMenu.css
+++ b/src/components/sideMenu/SideMenu.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--base-color2);
     width: 10vw;
     height: 91vh;
     margin: 2vh;
@@ -51,7 +51,7 @@
     height: 40vh;
     gap: 5vh;
     border-radius: 10vh;
-    background-color: rgb(238, 238, 238);
+    background-color: var(--base-color1);
 }
 
 .input_wrapper {
@@ -72,7 +72,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background-color: var(--white);
+    background-color: var(--base-color2);
     border-radius: 20px;
     position: relative;
     rotate: 90deg;
@@ -88,7 +88,7 @@
     left: 5px;
     width: 30px;
     height: 30px;
-    background-color: rgb(238, 238, 238);
+    background-color:  var(--base-color1);
     rotate: 90deg;
     z-index: 2;
     border-radius: 100px;
@@ -101,8 +101,8 @@
     top: 70%;
     -webkit-transform-origin: 50% 50%;
     transform-origin: 50% 50%;
-    fill: rgb(238, 238, 238);
-    color: rgb(238, 238, 238);
+    fill: var(--white);
+    color: var(--quaternary-color);
     -webkit-transition: all .35s;
     transition: all .35s;
     z-index: 1;
@@ -124,7 +124,7 @@
 
 /* Checked State */
 .input_wrapper input[type="checkbox"]:checked {
-    background-color: var(--white);
+    background-color: var(--base-color2);
 }
 
 .input_wrapper input[type="checkbox"]:checked:after {
@@ -153,12 +153,13 @@
     justify-content: space-around;
     gap: 1rem;
     align-items: center;
+    color: var(--quaternary-color);
 }
 
 .menu_divider {
     width: 5vw;
     height: 0.3vh;
-    background-color: rgb(161, 161, 161);
+    background-color: var(--quaternary-color);
     border-radius: 50px;
 }
 
