--- a/src/components/sideMenu/SideMenu.css
+++ b/src/components/sideMenu/SideMenu.css
@@ -168,8 +168,11 @@
     color: rgb(161, 161, 161);
     background-color: var(--white);
     padding: 2vh;
-    border-radius: 100%;
+    border-radius: 100px;
     margin-top: 1rem;
+    width: 1vw;
+    height: 1vw;
+    text-align: center;
 }
 
 .logo_menu {
