--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -18,3 +18,30 @@
   bottom: 1vw;
   color: aliceblue;
 }
+
+.loading_page {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  display: flex;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 3s ease-in-out;
+  z-index: 999;
+
+  .container_home_location {
+      overflow: hidden;
+  }
+
+}
+
+.loading_page.hidden {
+  opacity: 0;
+  z-index: 999;
+  transition: opacity 2s ease-in-out;
+  pointer-events: none;
+}
