--- a/src/components/sideMenu/SideMenu.css
+++ b/src/components/sideMenu/SideMenu.css
@@ -153,6 +153,7 @@
     gap: 1rem;
     align-items: center;
     color: var(--quaternary-color);
+    font-family: quicksand;
 }
 
 .menu_divider {
@@ -163,19 +164,22 @@
 }
 
 .pc_number {
-    font-size: 1.5vh;
+    font-size: 2vh;
     color: rgb(161, 161, 161);
     background-color: var(--white);
-    padding: 2vh;
     border-radius: 100px;
-    margin-top: 1rem;
-    width: 1vw;
-    height: 1vw;
-    text-align: center;
+    width: 2vw;
+    height: 2vw;
+    padding: 0.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: quicksand;
+    font-weight: 700;
 }
 
 .logo_menu {
-    width: 2.5vw;
-    height: 2.5vw;
+    width: 3vw;
+    height: 3vw;
     border-radius: 50%;
 }
