--- a/src/components/bannerNews/BannerNews.css
+++ b/src/components/bannerNews/BannerNews.css
@@ -22,4 +22,17 @@
     background-color: var(--quaternary-color);
     color: #fff;
     border-radius: 0 10vh 0 5vh;
+    box-shadow: 0 0 0.5vh 0.2vh rgba(0, 0, 0, 0.2);
+}
+
+.icon_weather {
+    position: absolute;
+    font-size: 2.5rem;
+    color: var(--quaternary-color);
+    background-color: var(--base-color1);
+    padding: 1rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
