Atualização de Página Principal

--- a/src/components/bannerMain/BannerMain.css
+++ b/src/components/bannerMain/BannerMain.css
@@ -16,3 +16,68 @@
     align-items: center;
     height: 95vh;
 }
+
+.banner_main_svg {
+    position: fixed;
+    width: 26vw;
+    right: 25.5vw;
+    top: 27.5vh;
+}
+
+.box_main_banner_info {
+    display: flex;
+    flex-direction: column;
+    font-weight: 700;
+    font-size: 1.9rem;
+    color: var(--black);
+    border-radius: 1vh;
+    position: fixed;
+    top: 20vh;
+    left: 20vw;
+    width: 50vw;
+    gap: 1vh;
+}
+
+.title_main {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: var(--black);
+    margin-top: 1vh;
+}
+
+.desc_main {
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: var(--base-color3);
+    margin-top: 5vh;
+}
+
+.button_main {
+  background-color: var(--button-theme1);
+  border-radius: 4px;
+  border: 0;
+  box-shadow: var(--button-theme1) 0 -1px 3px 0 inset,rgba(0,44,97,.1) 0 3px 6px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  text-align: center;
+  font-family: "Space Grotesk",-apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  max-height: 5vh;
+  max-width: 20vw;
+  padding: 10px 15px;
+  text-align: center;
+  transition: all .2s cubic-bezier(.22, .61, .36, 1);
+  margin-top: 5vh;
+}
+
+.button_main:hover {
+  background-color: var(--button-theme2);
+  transform: translateY(-2px);
+}
+
+.slick-arrow.slick-prev {
+    display: none;
+}
