--- a/src/components/bannerContent/BannerContent.css
+++ b/src/components/bannerContent/BannerContent.css
@@ -9,32 +9,36 @@
     margin-top: 2.5vh;
 }
 
-.container_banner_main {
+.container_banner_content {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
     height: 95vh;
+    overflow: hidden;
 }
 
 .banner_main_svg {
     position: fixed;
     width: 26vw;
-    right: 25.5vw;
+    right: 28.5vw;
     top: 27.5vh;
 }
 
-.box_main_banner_info {
+.box_content_banner_info {
     display: flex;
     flex-direction: column;
     font-weight: 700;
+    overflow: scroll;
+    overflow-x: hidden;
     font-size: 1.9rem;
     color: var(--black);
     border-radius: 1vh;
     position: fixed;
-    top: 20vh;
-    left: 20vw;
-    width: 50vw;
+    top: 15vh;
+    left: 18vw;
+    width: 56vw;
+    height: 50vh;
     gap: 1vh;
 }
 
@@ -78,6 +82,44 @@
   transform: translateY(-2px);
 }
 
-.slick-arrow .slick-prev {
+.slick-arrow.slick-prev {
     display: none;
+}
+
+.high_text {
+    font-weight: 700;
+    color: var(--tertiary-color);
+}
+
+.box_code {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 2.5vh;
+    align-items: center;
+    width: 95%;
+    height: 100%;
+    background-color: #282C34;
+    color: #fff;
+    gap: 1vh;
+    font-size: 1rem;
+    border-radius: 1vh;
+    box-shadow: 0 0 0.5vh 0.2vh rgba(0, 0, 0, 0.2);
+}
+
+.input_code {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    padding-left: 2.5vh;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    height: 100%;
+    background-color: #282C34;
+    color: #fff;
+    font-size: 1rem;
+    border-radius: 1vh;
+    border: none;
+    box-shadow: 0 0 0.5vh 0.2vh rgba(0, 0, 0, 0.2);
+    margin-bottom: 100px;
 }
