--- a/src/components/bannerMain/BannerMain.css
+++ b/src/components/bannerMain/BannerMain.css
@@ -59,7 +59,6 @@
   box-shadow: var(--button-theme1) 0 -1px 3px 0 inset,rgba(0,44,97,.1) 0 3px 6px 0;
   box-sizing: border-box;
   color: #fff;
-  cursor: pointer;
   text-align: center;
   font-family: "Space Grotesk",-apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   font-size: 18px;
@@ -71,6 +70,7 @@
   text-align: center;
   transition: all .2s cubic-bezier(.22, .61, .36, 1);
   margin-top: 5vh;
+  text-decoration: none;
 }
 
 .button_main:hover {
