--- a/src/pages/names/Names.css
+++ b/src/pages/names/Names.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: var(--white);
     justify-content: center;
     align-items: center;
     position: absolute;
