--- a/src/components/bannerMain/BannerMain.css
+++ b/src/components/bannerMain/BannerMain.css
@@ -65,7 +65,7 @@
   font-weight: 700;
   line-height: 24px;
   max-height: 5vh;
-  max-width: 20vw;
+  min-width: 20vw;
   padding: 10px 15px;
   text-align: center;
   transition: all .2s cubic-bezier(.22, .61, .36, 1);
@@ -81,3 +81,35 @@
 .slick-arrow .slick-prev {
     display: none;
 }
+
+.buttons_layout {
+    width: 30vw;
+    display: flex;
+    gap: 1vw;
+}
+
+.button_main_user {
+    background-color: var(--button-theme1);
+    border-radius: 4px;
+    border: 0;
+    box-shadow: var(--button-theme1) 0 -1px 3px 0 inset,rgba(0,44,97,.1) 0 3px 6px 0;
+    box-sizing: border-box;
+    color: #fff;
+    text-align: center;
+    font-family: "Space Grotesk",-apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    max-height: 5vh;
+    min-width: 5vw;
+    padding: 10px 15px;
+    text-align: center;
+    transition: all .2s cubic-bezier(.22, .61, .36, 1);
+    margin-top: 5vh;
+    text-decoration: none;
+}
+
+.button_main_user:hover {
+    background-color: var(--button-theme2);
+    transform: translateY(-2px);
+  }
